# k210-sdk-remake

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt  example.c
cmake/: k210-toolchain.cmake
examples/: CMakeLists.txt
examples/00-hello-world/: main.cpp
examples/10-sha256-test/: main.c
examples/22-mnist-inference/: a.ipynb  main.c
include/: pin.h
lib/: CMakeLists.txt
lib/drivers/include/: gpio_common.h  iomem.h
lib/nncase/: CMakeLists.txt  nncase.cpp
lib/nncase/v0/: CMakeLists.txt
lib/nncase/v1-rev/: CMakeLists.txt
lib/nncase/v1-rev/include/nncase/: version.h
lib/nncase/v1-rev/lib/cmake/nncasefunctional/: nncasefunctionalTargets.cmake
lib/nncase/v1-rev/lib/cmake/nncaseruntime/: nncaseruntimeTargets.cmake
lib/nncase/v1/lib/cmake/nncaseruntime/: nncaseruntimeTargets.cmake
src/: CMakeLists.txt
src/01-sha-uart/: CMakeLists.txt  lcd.c  main.c  my_sha256.c  my_sha256.h
src/02-aes-ecb/: CMakeLists.txt  a.ipynb  a.out  image2.h  img.out  lcd.h  main.c
src/03-nncase/: CMakeLists.txt  final.kmodel  main.c  mnist.kmodel
src/04-ddream/: CMakeLists.txt  ddream.kmodel  dummy.kmodel  gc0328.h  key.h  lcd.h  main.cpp  ov2640.h  tick.h
src/04-gesture/: CMakeLists.txt  hagrid2.kmodel  key.h  lcd.c  lcd.h  main.cpp  tick.h
